2008-12-15  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Cameron Zwarich.

        <rdar://problem/6289933> Change WebKit-related projects to build with GCC 4.2 on Leopard.

        * Configurations/Base.xcconfig:
        * Configurations/DebugRelease.xcconfig:

2008-12-15  Adele Peterson  <adele@apple.com>

        Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=22871
        <rdar://problem/6417316> RenderThemeWin buttons are too short/thin

        * rendering/RenderButton.cpp: (WebCore::RenderButton::setupInnerStyle): 
        Check if the button's style (not the new inner style) has appearance set to determine whether we should set padding on the inner style.

2008-12-15  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by Oliver Hunt.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=22865

        Add complete WML <table> / <tr> / <td> element support.
        Proper handling of all table related attributes, including tests.

        Tests: fast/wml/table-element-align-attribute-invalid.wml (variable reference in 'align' attribute, raises error)
               fast/wml/table-element-columns-attribute-invalid-number.wml (columns='0', raises error)
               fast/wml/table-element-columns-attribute-invalid.wml (non-numeric 'columns' attribute value, raises error)
               fast/wml/table-element-columns-attribute-missing.wml (missing 'columns')
               fast/wml/table-element-columns-attribute.wml (test 'columns' attribute and <td> count mismatches)

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::offsetParent):
        * rendering/RenderTableRow.cpp:
        (WebCore::RenderTableRow::addChild):
        * wml/WMLTableElement.cpp: Added.
        (WebCore::WMLTableElement::WMLTableElement):